tests/transpiler/x/zig/for_map_collection.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/for_map_collection.zig:6:10: error: type 'hash_map.HashMap([]const u8,i64,hash_map.StringContext,80)' is not indexable and not a range
/workspace/mochi/tests/transpiler/x/zig/for_map_collection.zig:6:10: note: for loop operand must be a range, array, slice, tuple, or vector
