tests/transpiler/x/zig/for_map_collection.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:40 +0000
const std = @import("std");

pub fn main() void {
    const m = blk: { var m = std.StringHashMap(i64).init(std.heap.page_allocator); m.put("a", 1) catch unreachable; m.put("b", 2) catch unreachable; break :blk m; };
    for (m) |k| {
        try std.io.getStdOut().writer().print("{any}\n", .{k});
    }
}
